gcc/testsuite/rust/rustc/ui/parser/keyword-override.rs
fn main() {
    let override = (); // { dg-error "" "" { target *-*-* } }
}

